--- a/src/iphone.html
+++ b/src/iphone.html
@@ -358,7 +358,8 @@
                         width: 187,
                         height: 258,
                         image_format: 'jpeg',
-                        jpeg_quality: 90
+                        jpeg_quality: 90,
+                        flip_horiz: true
                     });
                     Webcam.attach( '.camera' );
 
